# pydeadcode

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: analyzer.rs  lib.rs  main.rs
