[package]
name = "pydeadcode"
version = "0.1.0"
edition = "2021"
authors = ["Utsav Pal "]
description = "Fast Python dead code finder, built in Rust"
repository = "https://github.com/utsav-pal/pydeadcode"
license = "MIT"

[[bin]]
name = "pydeadcode"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.24"
tree-sitter-python = "0.21"
walkdir = "2.4"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"

[dev-dependencies]
tempfile = "3.8"
